--- a/main.html
+++ b/main.html
@@ -1,13 +1,64 @@
-<!DOCTYPE html>
-
 <html>
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<style>
+  body {
+    background-color: rgb(204, 204, 204);
+  }
+  h1 {
+    text-align: center;
+  }
+  h2 {
+    text-align: center;
+  }
+  ul {
+    list-style-type: none;
+  }
+  li {
+    list-style-type: none;
+  }
+  li a {
+    text-decoration-line: none;
+  }
+  .player_one, .player_two {
+    background-color: rgb(255, 255, 255);
+    padding: 10px;
+    border-radius: 10px;
+  }
+</style>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	
+<h1>My Playlist</h1>
+
+<h2>Now Playing...</h2>
+
+<div class="player_one">
+  <video controls>
+    <source src="video_source.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+</div>
+
+<h2>MP3 songs</h2>
+
+<ul>
+  <li><a href="song1.mp3" target="_blank">Song 1</a></li>
+  <li><a href="song2.mp3" target="_blank">Song 2</a></li>
+  <li><a href="song3.mp3" target="_blank">Song 3</a></li>
+  <li><a href="song4.mp3" target="_blank">Song 4</a></li>
+  <li><a href="song5.mp3" target="_blank">Song 5</a></li>
+</ul>
+
+<div class="player_two">
+  <audio controls>
+    <source src="audio_source.mp3" type="audio/mpeg">
+    Your browser does not support the audio tag.
+  </audio>
+</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
